# macos-infra

./: .gitignore  .gitmodules  .yamllint  CODE_OF_CONDUCT.md  HOWTO-base-images.md  LICENSE.md  README-ZFS.md  README-rsync.md  README.md  ansible.cfg  clean-obuilder-cache.yml  clean.yml  default.config.yml  deploy-base-images.yml  dune  dune-project  flush-rsync.yml  hosts  macos-base-image.opam  main.ml  main.yml  playbook.yml  reboot.yml  update-macos.yml  update-ocluster.yml  update.sh  wipe-mac.yml
.githooks/: pre-commit
.github/workflows/: ansible.yml  uninstall-homebrew.sh
docs/: Makefile  fuse.txt  mac-worker.md
roles/base-image/tasks/: main.yml
roles/busybox/tasks/: main.yml
roles/docker/tasks/: main.yml
roles/homebrew/tasks/: main.yml
roles/macos/tasks/: main.yml
roles/master-image/tasks/: main.yml
roles/monitor/tasks/: main.yml
roles/monitor/templates/: com.tarides.ocluster.monitor.plist  monitor.sh
roles/obuilder-fs/tasks/: main.yml
roles/ocaml/tasks/: main.yml
roles/ocluster/tasks/: main.yml
roles/ocluster/templates/: com.tarides.ocluster.worker.plist
roles/reboot/tasks/: main.yml
roles/sysinstall/tasks/: main.yml
roles/worker/tasks/: dmg.yml  main.yml  zfs.yml
roles/zfs/tasks/: main.yml
scripts/: README.md  cleanup.sh  macos-homebrew-ocaml.sh  new-user.sh  zfs-cache.sh  zfs-setup.sh
src/lib/: current_obuilder.ml  dune  macos_base_image.ml
tests/: ansible.cfg  default.config.yml  requirements.txt
